--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 <html>
     <header>
         <title>Mini Feed - Guide Flask</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </header>
 
     <style>
@@ -19,12 +20,15 @@
         <div class="center-screen">
             <div>
                 <h1>Welcome to Mini Feed</h1>
-                <a class="btn btn-primary" href="https://guide-flask.herokuapp.com/docs/swagger">Swagger Documentation</a>
-                <a class="btn btn-primary" href="https://guide-flask.herokuapp.com/docs/redoc">Redoc Documentation</a>
+                <a class="btn btn-primary" href="/docs/swagger">Swagger Documentation</a>
+                <a class="btn btn-primary" href="/docs/redoc">Redoc Documentation</a>
             </div>
-            
+
         </div>
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     </body>
+
 </html>
